<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/create_task"
        app:navigationIcon="@drawable/ic_navigate"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="24dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/task_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_title"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/task_description" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="7"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_description"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/til_start_time"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_calendar"
        android:hint="@string/task_date">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/til_date"
        app:layout_constraintStart_toEndOf="@id/til_date"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginStart="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_clock"
        android:hint="@string/task_start_time">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/task_cancel_edit"
        android:textAllCaps="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.Button"
        android:text="@string/task_save"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>